# book-recommender

./: .gitignore  README.md  data.dvc  dvc.yaml  requirements.txt  train.sh
.github/workflows/: python-test.yml  tests.yml
admin/: PitchDeck.pptx
app/backend/: Dockerfile
app/backend/src/routers/: recommend.py
backend/: Dockerfile  pyproject.toml
backend/backend/src/: main.py
backend/backend/src/routers/: books.py  health.py
backend/tests/: test_books.py  test_recommend.py
data/: raw.dvc
docs/: CONTRIBUTING.md  architecture.md  backend.md  baseline_recommender.md  training_vm.md
experiments/: 01_exploratory_data_analysis.ipynb
frontend/: Dockerfile
frontend/src/: main.py
integration_tests/: test_project_structure.py
ml_pipeline/src/datasets/: goodbooks.py
ml_pipeline/src/evaluation/: ranking_metrics.py
ml_pipeline/src/models/: item_based_cf.py
ml_pipeline/src/trainers/: run_baseline.py
ml_pipeline/tests/: test_baseline_pipeline.py
models/metrics/: item_based_cf_baseline.json  item_based_cf_baseline_top100.json
tests/: test_project_structure.py
